apps/arr-stack/radarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    servarr.app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      servarr.app: radarr
  template:
    metadata:
      labels:
        servarr.app: radarr
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:4.2.4
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: data
              mountPath: "/config"
            - name: movies
              mountPath: "/movies"
            # - name: import
            #   mountPath: "/import"
            - name: qflood-downloads
              mountPath: "/qflood-downloads"
            - name: sabnzbd-downloads
              mountPath: "/sabnzbd-downloads"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radarr-data
        - name: movies
          persistentVolumeClaim:
            claimName: jellyfin-movies-pvc
        # - name: import
        #   persistentVolumeClaim:
        #     claimName: radarr-import-movies
        - name: qflood-downloads
          persistentVolumeClaim:
            claimName: qflood-downloads
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
