apps/arr-stack/radarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  type: ClusterIP
  selector:
    servarr.app: radarr
  ports:
    - port: 7878
